Datos aprendiz y link de ZAJUNA

--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-hola mundo 
+HOLA MUNDO 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Hola instructor SENA</h1>
+    <h3>Soy CLAUDIA TORRES</h3>
+    <h4>Ficha:2834580</h4>
+    <P>Bienvenido a DevOps y Entrega Continua</P>
+    <br>
+    <a href="https://zajuna.sena.edu.co/index.php">Link para ZAJUNA</a>
+</body>
+</html>
